[tool.poetry]
name = "threatcode-cli"
version = "0.7.10"
description = "ThreatCode Command Line Interface (conversion, check etc.) based on pyThreatCode"
authors = ["Md Sulaiman <infosulaiman@icloud.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/ThreatCode/threatcode-cli"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security"
]
packages = [
    { include = "threatcode" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
prettytable = "^3.1.1"
pythreatcode = "^0.10.4"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
threatcode = "threatcode.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
